// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp/> Debe de mostrar una lista de categorias 1`] = `
<div
  className="container mt-5"
>
  <h2
    className="h1 mb-3"
  >
    gifR
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Ozark"
      key="25c04009-71e2-4668-ba4e-5dc81970a9b8"
    />
    <GifGrid
      category="Simpsons"
      key="6924e910-553d-4809-8950-3ba9b4847a66"
    />
  </ol>
</div>
`;

exports[`Pruebas en <GifExpertApp/> Debe mostrar el componente correctamente 1`] = `
<div
  className="container mt-5"
>
  <h2
    className="h1 mb-3"
  >
    gifR
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
